Fix function runtime version in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   "buildCommand": "npm run build:prod",
   "functions": {
     "api/**/*.ts": {
-      "runtime": "@vercel/node@3",
+      "runtime": "nodejs20.x",
       "maxDuration": 10
     }
   },
