🔒 SÉCURITÉ: Migration complète vers API serverless
✅ Sécurisation de toutes les API externes:
- SendGrid → /api/email/send
- MongoDB → /api/database/connect
- Google Analytics → /api/analytics/track
- Gemini AI → /api/ai/gemini

✅ Corrections de sécurité:
- Suppression des clés API exposées côté client
- Migration AdGeneratorDemo vers API serverless
- Protection complète des variables d'environnement

✅ Nouveaux services:
- geminiService.ts pour interactions sécurisées
- Guide Vercel pour configuration des variables
- Middleware de sécurité renforcé

🚀 Application prête pour production sécurisée

--- a/.env.production.template
+++ b/.env.production.template
@@ -17,7 +17,8 @@ VITE_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 
 # Google Analytics API Secret (pour server-side tracking)
 # Obtenez-le sur: Google Cloud Console > APIs & Services
-GA4_API_SECRET=your_ga4_api_secret_here
+# ⚠️ AVERTISSEMENT DE SÉCURITÉ: Ne jamais committer de vraies clés API
+GA4_API_SECRET=<VOTRE_GA4_API_SECRET>
 
 # ================================
 # CONTACT ET COMMUNICATION
@@ -39,7 +40,7 @@ VITE_SITE_URL=https://ecomboost-dz.com
 VITE_API_BASE_URL=https://ecomboost-dz.com/api
 
 # Clé API pour services externes (si nécessaire)
-VITE_API_KEY=your_api_key_here
+VITE_API_KEY=<VOTRE_API_KEY>
 
 # ================================
 # FONCTIONNALITÉS
@@ -52,6 +53,7 @@ VITE_ENABLE_ERROR_TRACKING=true
 VITE_ENABLE_LEAD_CAPTURE=true
 VITE_ENABLE_PWA=true
 VITE_ENABLE_SERVICE_WORKER=true
+VITE_ENABLE_CHATBOT=true
 
 # ================================
 # SÉCURITÉ
@@ -60,27 +62,29 @@ VITE_ENABLE_SERVICE_WORKER=true
 ALLOWED_ORIGINS=https://ecomboost-dz.com,https://www.ecomboost-dz.com
 
 # Clé secrète pour JWT (si utilisé)
-JWT_SECRET=your_super_secret_jwt_key_here
+JWT_SECRET=<VOTRE_JWT_SECRET>
 
 # ================================
 # SERVICES TIERS
 # ================================
 # SendGrid (pour l'envoi d'emails)
-SENDGRID_API_KEY=your_sendgrid_api_key
+SENDGRID_API_KEY=<VOTRE_SENDGRID_API_KEY>
 SENDGRID_FROM_EMAIL=noreply@ecomboost-dz.com
 
 # Mailgun (alternative à SendGrid)
-MAILGUN_API_KEY=your_mailgun_api_key
+MAILGUN_API_KEY=<VOTRE_MAILGUN_API_KEY>
 MAILGUN_DOMAIN=mg.ecomboost-dz.com
 
 # ================================
 # BASE DE DONNÉES (si nécessaire)
 # ================================
-# MongoDB
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/ecomboost-dz
+# MongoDB - IMPORTANT: Remplacez par vos propres identifiants
+# Format: mongodb+srv://<VOTRE_UTILISATEUR>:<VOTRE_MOT_DE_PASSE>@<VOTRE_CLUSTER>.mongodb.net/<VOTRE_DB>
+MONGODB_URI=mongodb+srv://<VOTRE_UTILISATEUR>:<VOTRE_MOT_DE_PASSE>@<VOTRE_CLUSTER>.mongodb.net/<VOTRE_DB>
 
-# PostgreSQL
-DATABASE_URL=postgresql://username:password@localhost:5432/ecomboost_dz
+# PostgreSQL - IMPORTANT: Remplacez par vos propres identifiants
+# Format: postgresql://<VOTRE_UTILISATEUR>:<VOTRE_MOT_DE_PASSE>@<VOTRE_HOST>:<PORT>/<VOTRE_DB>
+DATABASE_URL=postgresql://<VOTRE_UTILISATEUR>:<VOTRE_MOT_DE_PASSE>@<VOTRE_HOST>:<PORT>/<VOTRE_DB>
 
 # ================================
 # CACHE ET PERFORMANCE
